src/objects/BMCServiceDesk__Scheduler_Exceptions__c.object
<CustomObject>
    <description>Stores the exceptions that are generated while running the scheduled normalization job.</description>
    <fields>
        <fullName>BMCServiceDesk__Exception__c</fullName>
        <label>Exception</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKNormalization_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Normalization Rule</label>
        <referenceTo>BMCServiceDesk__Normalization_Rule__c</referenceTo>
        <relationshipLabel>Scheduler Exceptions</relationshipLabel>
        <relationshipName>Scheduler_Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Scheduler Exception</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <columns>NAME</columns>
        <columns>BMCServiceDesk__Exception__c</columns>
        <columns>BMCServiceDesk__FKNormalization_Rule__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Exception-{00000}</displayFormat>
        <label>Scheduler Exceptions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduler Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>